# pcc-fall-2025

./: README.md
artifact-removal-pipeline/: CMakeLists.txt  EEGData.cpp  EEGFiltering.cpp  Func_EEG_Wear.h  Hurst.cpp  Mean_Corr.cpp  Med_Gradient.cpp  RawEEGtoEEGData.cpp  Slope_Band.cpp  Variance.cpp  Z_Score.cpp  eeg_sample.csv  kurtosis.cpp  main.cpp  test_func.cpp  test_main.cpp
data-engine/: .gitignore  README.md  config.yaml  main.ipynb  test.txt
data-engine/caploc/: tuh-tcp-ar-cap.elp
data-engine/data/original/: README.md
data-engine/engine/: eeg_data.py  filters.py  main.py  plotter.py  testing.py
data-engine/matlab/: RELAX_config.yaml  load_RELAX_config.m
data-engine/model/: CLEnet.py  ema_1d.py  features.py  temporal.py
data-engine/notebooks/: main.ipynb  testing.ipynb
data-engine/src/: config.py  dataset_loader.py  eeg_data.py  processor.py  utilities.py
data-engine/src/loaders/: tuh_loader.py
